fix: fix image read bug and test file

--- a/config/config-defaults.yaml
+++ b/config/config-defaults.yaml
@@ -1,3 +1,6 @@
+# for Hayao : 1.2, 1.2, 1.2, 0.8
+# for Paprika : 1.0, 1.0, 1.0, 0.005
+# for Shinkai: 1.7, 1.7, 1.7, 1.0
 real_loss_weight: 1.7
 fake_loss_weight: 1.7
 gray_loss_weight: 1.7
